--- a/DevLUpBootcampJam/Config/DefaultEditor.ini
+++ b/DevLUpBootcampJam/Config/DefaultEditor.ini
@@ -15,3 +15,5 @@ SnapAxis=Y
 +SnapLayers=(Name="Default",Depth=500.000000)
 +SnapLayers=(Name="Background",Depth=0.000000)
 
+[/Script/AdvancedPreviewScene.SharedProfiles]
+
